--- a/index.html
+++ b/index.html
@@ -37,11 +37,22 @@
                 <img src="img/facebook.svg" alt="">
             </a>
     </div>
+    <div class="header_nav-mobile">
+        <a href="#">Описание</a>
+        <a href="#">Трейлер</a>
+        <a href="#">Отзывы</a>
+</div>
+<div class="header_menu-close">
+    <img src="img/menu-button-close.svg" alt="">
+</div>
        </div>
     </header>
 
     <main class="main">
         <div class="container">
+            <div class="menu-burger">
+                <img src="img/burger_line_list_menu_nav_navigation_option_icon_123231.svg" alt="">
+            </div>
             <div class="main_rating">
                 <div class="main_rating-title">2022, боевик, триллер</div>
                 <div class="main_rating-wrap">                
@@ -145,7 +156,11 @@
             </ul>
         </div>
     </footer>
-    
+    <div class="modal close">
+        <div class="modal_inner">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Sdp6VL_NBnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
     <script src="js/swiper-bundle.js"></script>
     <script src="js/main.js"></script>
 </body>
